--- a/Sample/src/main/res/layout/activity_main.xml
+++ b/Sample/src/main/res/layout/activity_main.xml
@@ -30,8 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintDimensionRatio="H,2:1"
-            app:layout_constraintTop_toTopOf="parent"
-            android:visibility="visible">
+            app:layout_constraintTop_toTopOf="parent">
 
         </cn.com.maxpanda.view.ScratchView>
 
